2008-10-24  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix handling of stdin stream (in particular, in sieve).
	
	* libsieve/extensions/spamd.c (spamd_test): Fix typo.
	*  mailbox/file_stream.c (struct _file_stream): New members
	size and size_computed.
	(_stdin_file_read, _stdin_file_readline): Fix types of fs_offset.
	(_stdin_file_size): New function.
	(_stdout_file_write): Register _stdin_file_size as stream_size
	method if seekable flag is set.
	* mailbox/message_stream.c (struct _mu_rfc822_message): Remove
	unused member.
	* sieve/sieve.c (sieve_message): Create a seekable stream.

2008-10-23  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libsieve/extensions/spamd.c: New tag :user.

	* sieve/sieve.c: New working mode: if `-f -' is given, treat
	stdin as an RFC2822 message, apply the script to it and exit with
	1 if the message gets deleted, 0 if it is not and EX_SOFTWARE on
	software errors.
	In traditional mode, exit with standard sysexit codes.
	* testsuite/sieve/i-numeric.exp: Reflect changes in sieve.
	* NEWS: Update.
	
2008-10-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/sql.c (decode_tuple): Use new tuple parsing mode, unless
	`positional' is set to true.
	* include/mailutils/sql.h (struct mu_sql_module_config)
	(struct mu_internal_sql_config): New member `positional'.
	* libcfg/sql.c (mu_sql_param): New statement `positional'.

	* auth/virtual.c (getpwnam_virtual): Close file.
	* doc/texinfo/programs.texi: Document virtmode.
	* testsuite/Makefile.am (EXTRA_DIST): Remove
	* testsuite/makespool: Remove.

	* NEWS: Update.
	* doc/texinfo/libmuauth.texi: Update.
	* doc/texinfo/mailutils.texi: Update.
	* doc/texinfo/programs.texi: Update.
	
	* include/mailutils/mailbox.h (mu_mailbox_create_from_url): New
	function.
	* include/mailutils/mutil.h (mu_aget_user_email_domain): New
	function.
	* libproto/include/address0.h: Remove obsolete comment.
	* libproto/remote/mbox.c (remote_mbox_append_message): If